--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ entrypoints==0.4
 executing==0.8.3
 Flask==2.1.3
 Flask-Cors==3.0.10
+gunicorn==20.1.0
 importlib-metadata==4.12.0
 ipykernel==6.15.0
 ipython==8.4.0
